        - updated bundled libptytty to fix a bug where the tty would be kept
          open (see the libptytty ChangeLog for details).
        - delay setting the IUTF8 flag to after the tty settings have been
          set so its value does not get lost (reported and analysed by Andrei
          Paskevich).
        - rip out support for obsolete sgtty.h interface.

8.1  Thu Dec  7 22:27:25 CET 2006
        - ｹﾘｽﾏｽﾌ゚ﾚｾ゙ﾝﾄ - zomg!!1, it's too early!!!
        - fix the assumption that chars < 256 are single-width. Now
          only assume this for codepoints 32 to 126 (reported by Dai.H.).
        - $term->strwidth returned wide chars as width 1, because some jerk
          confused min and max. Fixing this also fixes xim-onthespot.
          Reported by Takano Akio.
	- secondaryScroll is now enabled by default (as per the manpage),
          reported by exg.
        - correct the description of [percent]color rgba format in the manpage.
        - incorporated macosx-clipboard extension by Samuel Ljungkvist.
        - ignore (some) useless focus events (reported by mmc).
	- updated compose table to unicode 5.0.0.

8.0  Thu Nov  2 18:35:19 CET 2006
	- combining characters cleared the area instead of creating an overlay,
          thus losing the ability to draw combining characters properly in most
          circumstances (reported by exg).
	- specified fonts were incorrectly morphed to bold/italic according to the
          basefont, even if explicitly specified (tracked down by tpope).
        - fixed urxvt::strwidth to calculate width in the same way as screen.C.
	- fix a crash caused by passing negative widths to overlay functions.
	- added 'matcher' extension by tpope, replacing the mark-urls extension.
        - improve url regex to match anything www.* (tpope).
        - fixed bug with outline cursor color being wrong after xft fonts.
        - update to libptytty-1.0.
	- give proper diagnostic when RXVT_SOCKET is too long instead of